--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   
   # File Storage
   path_provider: ^2.1.1 # For permanent image storage
+  flutter_colorpicker: ^1.1.0
 
 dev_dependencies:
   flutter_test:
