--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,33 +34,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  
-  # State Management
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
-  
-  # Local Storage
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  
-  # Camera/Image
   image_picker: ^1.0.4
-  
-  # Utilities
   uuid: ^4.2.1
-  
-  # Native Splash
   flutter_native_splash: ^2.3.7
-  
-  # SVG support
   flutter_svg: ^2.0.9
-  
-  # Localization
   easy_localization: ^3.0.7
-  
-  # File Storage
-  path_provider: ^2.1.1 # For permanent image storage
+  path_provider: ^2.1.1 
   flutter_colorpicker: ^1.1.0
+  mobile_scanner: ^7.1.2
 
 dev_dependencies:
   flutter_test:
